# pkgbox

./: GOALS.md  README.md
.github/workflows/: pull-request.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  introduction.rst
pkgbox/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.json  pyproject.toml
pkgbox/etc/: config.json
pkgbox/lib/: container.sh  oci.sh  pkg.sh  rootfs.sh  runtime.sh
pkgbox/libpkgbox/: Cargo.toml
pkgbox/pkgbox/: Cargo.toml
pkgbox/specs/: simple
pkgbox/specs/foobar/: pkgbox.spec.bash
pkgbox/specs/hello-world-c/: pkgbox.spec.bash
pkgbox/specs/simple/: simple.bash
pkgbox/specs/simple/simple-src/: Makefile  hello.c
pkgbox/src/assets/crun/: config.json
pkgbox/src/pkgbox/: cli.py  containerfile.py  env.py  errors.py  image.py
pkgbox/src/pkgbox/builders/: builder_crun.py
pkgbox/src/pkgbox/containerfile/: __init__.py  parser.py  types.py
pkgbox/src/pkgbox/containerfile/instructions/: base.py  meta.py
pkgbox/src/pkgbox/oci/: common.py  v1.py
pkgbox/src/pkgbox/plugin/: __init__.py  mgr.py  types.py
pkgbox/src/pkgbox/rootfs/: __init__.py  mgr.py  types.py
pkgbox/test/: conftest.py  test_cli_build.py  test_cli_info.py  test_cli_init.py  test_cli_inspect.py  test_cli_version.py  test_containerfile.py  test_containerfile_parser.py  test_containerfile_types.py  test_env.py  test_errors_base.py  test_errors_pberror.py  test_image.py  test_oci_common_rdn.py  test_oci_v1_descriptor.py  test_oci_v1_digest.py  test_oci_v1_manifest.py  test_oci_v1_mediatype.py  test_pkgbox.py  test_rootfs.py  test_rootfs_mgr.py  test_rootfs_types.py
pkgbox/test/fixtures/: Containerfile  Containerfile.dumb  Containerfile.simple  manifest.json
(+3 files in other folders)
