[tool.poetry]
name = "pkgbox"
version = "0.0.1"
description = "An extendable packaging tool that packages artifacs as OCI layers"
authors = ["odra <oss@lrossetti.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{include = "pkgbox", from = "src/"}
]

[tool.poetry.scripts]
pkgbox = "pkgbox.cli:run"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
